syntax = "proto3";

package henry_grpc;

option go_package = ".;henry_grpc";

service Hello {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service Hi {
  rpc SayHi (HiRequest) returns (HiReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message HiRequest {
  string name = 1;
}

message HiReply {
  string message = 1;
}
